* Add category getall test
