# controllers/categories.go
@@ -11,13 +11,29 @@ type CategoryController struct {
     beego.Controller
 }
 
-// @Title Get
-// @Description Food Category
+// @Title GetAll
+// @Description get all Food Categories
 // @Success 200 {object} models.Category
-// @Failure 500 Internal server error
 // @router / [get]
-func (c *CategoryController) Get() {
+func (c *CategoryController) GetAll() {
     category, err := models.GetCategory()
+    if err != nil {
+        c.Data["json"] = err.Error()
+    } else {
+        c.Data["json"] = category
+    }
+    c.ServeJSON()
+}
+
+// @Title Get
+// @Description get food category by id
+// @Param    uid        path     string    true        "The uid of food category"
+// @Success 200 {string} models.Category.Name
+// @Failure 403 uid is empty
+// @router /:uid [get]
+func (c *CategoryController) Get() {
+    uid := c.GetString(":uid")
+    category, err := models.GetCategoryByID(uid)
     if err != nil {
         c.Data["json"] = err.Error()
     } else {
@@ -28,7 +44,7 @@ func (c *CategoryController) Get() {
 
 // @Title CreateCategory
 // @Description create categories
-// @Param    body        body    models.User    true        "body for category content"
+// @Param    body        body    models.Category    true        "body for category content"
 // @Success 200 {int} models.Category.Id
 // @Failure 403 body is empty
 // @router / [post]
